--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -1,3 +1,12 @@
-<p>
-  product-detail works!
-</p>
+<div class='card' *ngIf='product'>
+  <div class='card-header'>
+    {{pageTitle + ': ' + product.productName}}
+  </div>
+  <div class='card-footer'>
+      <button class='btn btn-outline-secondary'
+              (click)='onBack()'
+              style='width:80px'>
+        <i class='fa fa-chevron-left'></i> Back
+      </button>
+    </div>
+</div>
